Fixes a bug with nested tagList producing a message ' C stack usage  7978516 is too close to the limit'; Uses simple details tag instead of caret how/hide custom input; css -> set details' cursor type to normal

--- a/app/src/css/mx_base.css
+++ b/app/src/css/mx_base.css
@@ -86,7 +86,6 @@ blockquote {
 
 details {
   padding: 10px;
-  cursor: pointer;
 }
 
 details > summary {
